envoy.yml
eds:
  version_info: v1
  resources:
  - type: type.googleapis.com/envoy.api.v2.ClusterLoadAssignment
    cluster_name: myservice
    endpoints:
    - lb_endpoints:
      - endpoint:
          address: 
            socket_address:
              address: 127.0.0.1
              port_value: 80
cds:
  version_info: '2'
  name: nbx_card
  resources:
  - apitype: type.googleapis.com/envoy.api.v2.Cluster
    name: nbx_card
    connect_timeout: 0.50s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: nbx_card
      eds_eureka: true
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.152.121.103
                port_value: 31380
        - endpoint:
            address:
              socket_address:
                address: api.dev.stp.local
                port_value: 80
rds:
  version_info: '1'
  resources:
  - apitype: type.googleapis.com/envoy.api.v2.RouteConfiguration
    name: card_routes
    virtual_hosts:
    - name: nbx_card
      domains:
      - "*"
      routes:
      - match:
          prefix: "/cardpayments"
        route:
          cluster: nbx_card
